# on_device_learning

./: ATC.pptx  CPS.pptx  Efficient-enegy System.pptx  MCUs.m  Swarm TinyML.pptx  ble_client1.ino  ble_server.ino  calculation.md  calculation.py  load-esp-idf_win.ps1  matrix_sparse.py  mcu_table.csv  micro-network-project.pptx  papers.pptx  received_data.txt  system_design.md  system_structure.md  ~$micro-network-project.pptx
CameraWebServer/: CameraWebServer.ino
DL/: mnist_model.h5  mnist_model_quant.tflite  save_model.py
Paper Notes/: BLE Mesh Network.md  Core.md  DTinyML.md  Decentralized TinyML.pptx  pipeline.md  ~$Decentralized TinyML.pptx
Paper Notes/BLE Mesh Network/: communication.md  many-to-many.md  markdown_test.md  network.md  profilling.md  (+2 more)
else/: calculation.md  calculation.py  load-esp-idf_mac.sh  load-esp-idf_win.ps1
mobileNetV2/: bin_to_c_h.py  converter.py  mobilenetv2_segment.tflite  model_data.h
model_parallelism/: conv_Partition_height.py
model_partition/: README.md  main.py  model.py  network.py  node.py  partitioner.py
partition/: algorithm_results_summary.csv  partitioning_utils.py  run_partitioning.py
predictor/: MACs_tf.py  MACs_tflite.py  analyze_map.py  convert_single_layer.py  mobilenetv2_single_layer.tflite  model.tflite  model_converter.py  model_data.cc  simple_single_layer_model.tflite  tflite2cc.py
projects/: PC.py  custom_model.cpp  notes.md  setup-env.ps1
projects/module/gattc_tflm3/main/: CMakeLists.txt  main.cc  model_runner.cc  model_runner.h
template-app/main/: CMakeLists.txt  main.c
test/: sdkconfig.old
(+213 files in other folders)
